# cpp-osx-iokit_hid_system

./: README.md
.github/workflows/: ci.yml
example/: cget-requirements.txt  main.cpp
example-app/: CMakeLists.txt  Makefile  README.md  cget-requirements.txt
example-app/Resources/: MainMenu.xib
example-app/src/: AppDelegate.mm
include/pqrs/osx/: iokit_hid_system.hpp
include/pqrs/osx/iokit_hid_system/: aux_control_button.hpp  client.hpp  event_type.hpp  key_code.hpp
tests/: cget-requirements.txt
tests/src/: CMakeLists.txt  aux_control_button_test.cpp  dummy.cpp  key_code_test.cpp  test.cpp
